--- a/usr.sbin/mrouted/mrouted.8
+++ b/usr.sbin/mrouted/mrouted.8
@@ -1,30 +1,28 @@
-'\"	$NetBSD: mrouted.8,v 1.6 1995/12/10 10:07:07 mycroft Exp $
-'\"COPYRIGHT 1989 by The Board of Trustees of Leland Stanford Junior University.
-.TH MROUTED 8
-.UC 5
-.SH NAME
-mrouted \- IP multicast routing daemon
-.SH SYNOPSIS
-.B mrouted
-[
-.B \-p
-] [
-.B \-c
-.I config_file
-] [
-.B \-d
-[
-.I debug_level
-]]
-.SH DESCRIPTION
-.I Mrouted
+.\"	$OpenBSD: mrouted.8,v 1.8 2001/05/29 15:10:33 ho Exp $	
+.\"	$NetBSD: mrouted.8,v 1.6 1995/12/10 10:07:07 mycroft Exp $
+.\"COPYRIGHT 1989 by The Board of Trustees of Leland Stanford Junior University.
+.Dd May 8, 1995
+.Dt MROUTED 8
+.Os
+.Sh NAME
+.Nm mrouted
+.Nd IP multicast routing daemon
+.Sh SYNOPSIS
+.Nm mrouted
+.Op Fl c Ar config_file
+.Oo
+.Op Fl d Ar debug_level
+.Oc
+.Op Fl p
+.Sh DESCRIPTION
+.Nm
 is an implementation of the Distance-Vector Multicast Routing
 Protocol (DVMRP), an earlier version of which is specified in RFC-1075.
 It maintains topological knowledge via a distance-vector routing protocol
 (like RIP, described in RFC-1058), upon which it implements a multicast
 datagram forwarding algorithm called Reverse Path Multicasting.
-.PP
-.I Mrouted
+.Pp
+.Nm
 forwards a multicast datagram along a shortest (reverse) path tree
 rooted at the subnet on which the datagram originates. The multicast
 delivery tree may be thought of as a broadcast delivery tree that has
@@ -33,218 +31,233 @@ that have members of the destination group. Hence, datagrams
 are not forwarded along those branches which have no listeners of the
 multicast group. The IP time-to-live of a multicast datagram can be
 used to limit the range of multicast datagrams.
-.PP
+.Pp
 In order to support multicasting among subnets that are separated by (unicast)
 routers that do not support IP multicasting,
-.I mrouted
+.Nm
 includes support for
 "tunnels", which are virtual point-to-point links between pairs of
-.IR mrouted s
-located anywhere in an internet.  IP multicast packets are encapsulated for
-transmission through tunnels, so that they look like normal unicast datagrams
-to intervening routers and subnets.  The encapsulation
-is added on entry to a tunnel, and stripped off
-on exit from a tunnel.
+.Nm 
+daemons located anywhere in an internet.  IP multicast packets are encapsulated
+for transmission through tunnels, so that they look like normal unicast
+datagrams to intervening routers and subnets.  The encapsulation is added on
+entry to a tunnel, and stripped off on exit from a tunnel.
 By default, the packets are encapsulated using the IP-in-IP protocol
 (IP protocol number 4).
 Older versions of
-.I mrouted
+.Nm
 tunnel using IP source routing, which puts a heavy load on some
 types of routers.
-This version does not support IP source route tunnelling.
-.PP
-The tunnelling mechanism allows
-.I mrouted
+This version does not support IP source route tunneling.
+.Pp
+The tunneling mechanism allows
+.Nm
 to establish a virtual internet, for
 the purpose of multicasting only, which is independent of the physical
 internet, and which may span multiple Autonomous Systems.  This capability
 is intended for experimental support of internet multicasting only, pending
 widespread support for multicast routing by the regular (unicast) routers.
-.I Mrouted
+.Nm
 suffers from the well-known scaling problems of any distance-vector
 routing protocol, and does not (yet) support hierarchical multicast routing.
-.PP
-.I Mrouted
+.Pp
+.Nm
 handles multicast routing only; there may or may not be unicast routing
 software running on the same machine as
-.IR mrouted .
-With the use of tunnels, it
-is not necessary for
-.I mrouted
+.Nm mrouted .
+With the use of tunnels, it is not necessary for
+.Nm
 to have access to more than one physical subnet
 in order to perform multicast forwarding.
-.br
-.ne 5
-.SH INVOCATION
-.PP
-If no "\-d" option is given, or if the debug level is specified as 0,
-.I mrouted
-detaches from the invoking terminal.  Otherwise, it remains attached to the
-invoking terminal and responsive to signals from that terminal.  If "\-d" is
-given with no argument, the debug level defaults to 2.  Regardless of the
+.Sh INVOCATION
+If no
+.Fl d
+option is given, or if the debug level is specified as 0,
+.Nm
+detaches from the invoking terminal. Otherwise, it remains attached to the
+invoking terminal and responsive to signals from that terminal. If
+.Fl d
+is given with no argument, the debug level defaults to 2. Regardless of the
 debug level,
-.I mrouted
+.Nm
 always writes warning and error messages to the system
-log daemon.  Non-zero debug levels have the following effects:
-.IP "level 1"
-all syslog'ed messages are also printed to stderr.
-.IP "level 2"
+log daemon. Non-zero debug levels have the following effects:
+.Bl -hang -compact -offset indent
+.It 1
+all syslog'ed
+messages are also printed to stderr.
+.It 2
 all level 1 messages plus notifications of "significant"
 events are printed to stderr.
-.IP "level 3"
+.It 3
 all level 2 messages plus notifications of all packet
 arrivals and departures are printed to stderr.
-.PP
-Upon startup, mrouted writes its pid to the file /var/run/mrouted.pid .
-.SH CONFIGURATION
-.PP
-.I Mrouted
+.El
+.Pp
+Upon startup, mrouted writes its pid to the file
+.Pa /var/run/mrouted.pid .
+.Sh CONFIGURATION
+.Nm
 automatically configures itself to forward on all multicast-capable
 interfaces, i.e., interfaces that have the IFF_MULTICAST flag set (excluding
 the loopback "interface"), and it finds other
-.IR mrouted s
+.Nm
 directly reachable
 via those interfaces.  To override the default configuration, or to add
 tunnel links to other
-.IR mrouted s,
+.Nm
 configuration commands may be placed in
-mrouted.conf (or an alternative file, specified by the "\-c" option).
+.Pa /etc/mrouted.conf
+(or an alternative file, specified by the
+.Fl c
+option).
 There are four types of configuration commands:
-.nf
-
-    phyint <local-addr>   [disable]   [metric <m>]
-		 [threshold <t>] [rate_limit <b>]
-		   [boundary (<boundary-name>|<scoped-addr>/<mask-len>)]
-		   [altnet <network>/<mask-len>]
-
-    tunnel <local-addr> <remote-addr> [metric <m>]
-		 [threshold <t>] [rate_limit <b>]
-		   [boundary (<boundary-name>|<scoped-addr>/<mask-len>)]
-
-    cache_lifetime <ct>
-
-    pruning <off/on>
-
-    name <boundary-name> <scoped-addr>/<mask-len>
-
-.fi
-.PP
+.Bl -item -offset indent
+.It
+.Tn phyint <local-addr> [disable] [metric <m>]
+.Bl -tag -width flag -compact -offset indent
+.It [threshold <t>] [rate_limit <b>]
+.It [boundary (<boundary-name>|<scoped-addr>/<mask-len>)]
+.It [altnet <network>/<mask-len>]
+.El
+.It
+.Bl -tag -width flag -compact -offset indent
+.Tn tunnel <local-addr> <remote-addr> [metric <m>]
+.It [threshold <t>] [rate_limit <b>]
+.It [boundary (<boundary-name>|<scoped-addr>/<mask-len>)]
+.El
+.It
+.Tn cache_lifetime <ct>
+.It
+.Tn pruning <off/on>
+.It
+.Tn name <boundary-name> <scoped-addr>/<mask-len>
+.El
+.Pp
 The file format is free-form; whitespace (including newlines) is not
 significant.
 The
-.I boundary
+.Ar boundary
 and
-.I altnet
+.Ar altnet
 options may be specified as many times as necessary.
-.PP
+.Pp
 The phyint command can be used to disable multicast routing on the physical
-interface identified by local IP address <local-addr>, or to associate a
-non-default metric or threshold with the specified physical interface.
-The local IP address <local-addr> may be replaced by the
-interface name (e.g., le0).
+interface identified by local IP address
+.Ar <local-addr> ,
+or to associate a non-default metric or threshold with the specified
+physical interface. The local IP address
+.Ar <local-addr>
+may be replaced by the interface name (e.g., le0).
 If a phyint is attached to multiple IP subnets, describe each additional subnet
 with the altnet keyword.
 Phyint commands must precede tunnel commands.
-.PP
+.Pp
 The tunnel command can be used to establish a tunnel link between local
-IP address <local-addr> and remote IP address <remote-addr>, and to associate
-a non-default metric or threshold with that tunnel.
-The local IP address <local-addr> may be replaced by the
-interface name (e.g., le0).  The remote IP address <remote-addr> may
-be replaced by a host name, if and only if the host name has a single
+IP address
+.Ar <local-addr>
+and remote IP address
+.Ar <remote-addr> ,
+and to associate a non-default metric or threshold with that tunnel.
+The local IP address
+.Ar <local-addr>
+may be replaced by the interface name (e.g., le0).  The remote IP address
+.Ar <remote-addr>
+may be replaced by a host name, if and only if the host name has a single
 IP address associated with it.
-The tunnel must be set
-up in the mrouted.conf files of both routers before it can be used.
+The tunnel must be set up in the mrouted.conf files of both routers before
+it can be used.
 '\"For backwards compatibility with older
 '\".IR mrouted s,
 '\"the srcrt keyword specifies
 '\"encapsulation using IP source routing.
-.PP
+.Pp
 The cache_lifetime is a value that determines the amount of time that a
 cached multicast route stays in kernel before timing out. The value of this
 entry should lie between 300 (5 min) and 86400 (1 day). It defaults to 300.
-.PP
-The pruning <off/on> option is provided for
-.IR mrouted
+.Pp
+The
+.Ar pruning
+option is provided for
+.Nm
 to act as a non-pruning router. It is also possible to start
-.IR mrouted
-in a non-pruning mode using the "-p" option on the command line. It is
-expected that a router would be configured in this manner for test
-purposes only. The default mode is pruning enabled.
-.PP
+.Nm
+in a non-pruning mode using the
+.Fl p
+option on the command line. It is expected that a router would be configured
+in this manner for test purposes only. The default mode is pruning enabled.
+.Pp
 You may assign names to boundaries to make configuration easier with
 the name keyword.  The boundary option on phyint or tunnel commands
 can accept either a name or a boundary.
-.PP
+.Pp
 The metric is the "cost" associated with sending a datagram on the given
 interface or tunnel; it may be used to influence the choice of routes.
 The metric defaults to 1.  Metrics should be kept as small as possible,
 because
-.I mrouted
+.Nm
 cannot route along paths with a sum of metrics greater
 than 31.
-.LP
+.Pp
 The threshold is the minimum IP time-to-live required for a multicast datagram
 to be forwarded to the given interface or tunnel.  It is used to control the
 scope of multicast datagrams.  (The TTL of forwarded packets is only compared
 to the threshold, it is not decremented by the threshold.  Every multicast
 router decrements the TTL by 1.)  The default threshold is 1.
-.LP
+.Pp
 In general, all
-.IR mrouted s
+.Nm
 connected to a particular subnet or tunnel should
 use the same metric and threshold for that subnet or tunnel.
-.PP
+.Pp
 The rate_limit option allows the network administrator to specify a
 certain bandwidth in Kbits/second which would be allocated to multicast
 traffic.  It defaults to 500Kbps on tunnels, and 0 (unlimited) on physical
 interfaces.
-.PP
+.Pp
 The boundary option allows an interface
 to be configured as an administrative boundary for the specified
 scoped address. Packets belonging to this address will not
 be forwarded on a scoped interface.  The boundary option accepts either
 a name or a boundary spec.
-.PP
-.I Mrouted
+.Pp
+.Nm
 will not initiate execution if it has fewer than two enabled vifs,
 where a vif (virtual interface) is either a physical multicast-capable
 interface or a tunnel.  It will log a warning if all of its vifs are
 tunnels; such an
-.I mrouted
+.Nm
 configuration would be better replaced by more
 direct tunnels (i.e., eliminate the middle man).
-.SH "EXAMPLE CONFIGURATION"
-.PP
+.Sh EXAMPLE CONFIGURATION
 This is an example configuration for a mythical multicast router at a big
 school.
-.sp
-.nf
+.Bd -unfilled -compact -offset left
 #
 # mrouted.conf example
 #
-# Name our boundaries to make it easier
+# Name our boundaries to make it easier.
 name LOCAL 239.255.0.0/16
 name EE 239.254.0.0/16
 #
 # le1 is our gateway to compsci, don't forward our
-#     local groups to them
+# local groups to them.
 phyint le1 boundary EE
 #
 # le2 is our interface on the classroom net, it has four
-#     different length subnets on it.
-# note that you can use either an ip address or an
+# different length subnets on it.
+# Note that you can use either an ip address or an
 # interface name
 phyint 172.16.12.38 boundary EE altnet 172.16.15.0/26
 	altnet 172.16.15.128/26 altnet 172.16.48.0/24
 #
 # atm0 is our ATM interface, which doesn't properly
-#      support multicasting.
+# support multicasting.
 phyint atm0 disable
 #
-# This is an internal tunnel to another EE subnet
+# This is an internal tunnel to another EE subnet.
 # Remove the default tunnel rate limit, since this
-#   tunnel is over ethernets
+# tunnel is over ethernets.
 tunnel 192.168.5.4 192.168.55.101 metric 1 threshold 1
 	rate_limit 0
 #
@@ -252,38 +265,41 @@ tunnel 192.168.5.4 192.168.55.101 metric 1 threshold 1
 # Careful with those boundaries, Eugene.
 tunnel 192.168.5.4 10.11.12.13 metric 1 threshold 32
 	boundary LOCAL boundary EE
-.fi
-.SH SIGNALS
-.PP
-.I Mrouted
+.Ed
+.Sh SIGNALS
+.Nm
 responds to the following signals:
-.IP HUP
+.Bl -tag -width TERM -compact
+.It HUP
 restarts
-.I mrouted .
+.Nm mrouted .
 The configuration file is reread every time this signal is evoked.
-.IP INT
+.It INT
 terminates execution gracefully (i.e., by sending
 good-bye messages to all neighboring routers).
-.IP TERM
+.It TERM
 same as INT
-.IP USR1
-dumps the internal routing tables to /var/tmp/mrouted.dump.
-.IP USR2
-dumps the internal cache tables to /var/tmp/mrouted.cache.
-.IP QUIT
+.It USR1
+dumps the internal routing tables to
+.Pa /var/tmp/mrouted.dump .
+.It USR2
+dumps the internal cache tables to
+.Pa /var/tmp/mrouted.cache .
+.It QUIT
 dumps the internal routing tables to stderr (only if
-.I mrouted
+.Nm
 was invoked with a non-zero debug level).
-.PP
-For convenience in sending signals,
-.I mrouted
-writes its pid to /var/run/mrouted.pid upon startup.
-.bp
-.SH EXAMPLE
-.PP
+.El
+.Pp
+For convenience in sending signals, 
+.Nm
+writes its pid to
+.Pa /var/run/mrouted.pid
+upon startup.
+.Sh EXAMPLE
 The routing tables look like this:
-.nf
-
+.Pp
+.Bd -unfilled -compact -offset left
 Virtual Interface Table
  Vif  Local-Address                    Metric  Thresh  Flags
   0   36.2.0.8      subnet: 36.2          1       1    querier
@@ -316,19 +332,19 @@ Multicast Routing Table (1136 entries)
  .
  .
  .
-
-.fi
+.Ed
+.Pp
 In this example, there are four vifs connecting to two subnets and two
 tunnels.  The vif 3 tunnel is not in use (no peer address). The vif 0 and
 vif 1 subnets have some groups present; tunnels never have any groups.  This
 instance of
-.I mrouted
+.Nm
 is the one responsible for sending periodic group
 membership queries on the vif 0 and vif 1 subnets, as indicated by the
 "querier" flags. The list of boundaries indicate the scoped addresses on that
 interface. A count of the no. of incoming and outgoing packets is also
 shown at each interface.
-.PP
+.Pp
 Associated with each subnet from which a multicast datagram can originate
 is the address of the previous hop router (unless the subnet is directly-
 connected), the metric of the path back to the origin, the amount of time
@@ -337,16 +353,15 @@ multicasts from that origin, and a list of outgoing vifs.  "*" means that
 the outgoing vif is connected to a leaf of the broadcast tree rooted at the
 origin, and a multicast datagram from that origin will be forwarded on that
 outgoing vif only if there are members of the destination group on that leaf.
-.bp
-.PP
-.I Mrouted
+.Pp
+.Nm
 also maintains a copy of the kernel forwarding cache table. Entries
 are created and deleted by
-.I mrouted.
-.PP
+.Nm mrouted .
+.Pp
 The cache tables look like this:
-.nf
-
+.Pp
+.Bd -unfilled -compact -offset left
 Multicast Routing Cache Table (147 entries)
  Origin             Mcast-group     CTmr  Age Ptmr IVif Forwvifs
  13.2.116/22        224.2.127.255     3m   2m    -  0    1
@@ -358,8 +373,8 @@ Multicast Routing Cache Table (147 entries)
 >128.9.160.45
  198.106.194/24     224.2.135.190     9m  28s   9m  0P
 >198.106.194.22
-
-.fi
+.Ed
+.Pp
 Each entry is characterized by the origin subnet number and mask and the
 destination multicast group. The 'CTmr' field indicates the lifetime
 of the entry.  The entry is deleted from the cache table
@@ -384,21 +399,20 @@ forwarded on the scoped address on that interface.
 An additional line with a ">" as the first character is printed for
 each source on the subnet.  Note that there can be many sources in
 one subnet.
-.SH FILES
-/etc/mrouted.conf
-.br
-/var/run/mrouted.pid
-.br
-/var/tmp/mrouted.dump
-.br
-/var/tmp/mrouted.cache
-.SH SEE ALSO
-.BR mrinfo (8) ,
-.BR mtrace (8) ,
-.BR map-mbone (8)
+.Sh FILES
+.Bl -tag -width /var/tmp/mrouted.cache -compact
+.It Pa /etc/mrouted.conf
+.It Pa /var/run/mrouted.pid
+.It Pa /var/tmp/mrouted.dump
+.It Pa /var/tmp/mrouted.cache
+.El
+.Sh SEE ALSO
+.Xr map-mbone 8 ,
+.Xr mrinfo 8 ,
+.Xr mtrace 8
 .sp
 DVMRP is described, along with other multicast routing algorithms, in the
 paper "Multicast Routing in Internetworks and Extended LANs" by S. Deering,
 in the Proceedings of the ACM SIGCOMM '88 Conference.
-.SH AUTHORS
+.Sh AUTHORS
 Steve Deering, Ajit Thyagarajan, Bill Fenner
